chore: Add index to permission views and form

--- a/views/permissions/display.haml
+++ b/views/permissions/display.haml
@@ -15,6 +15,10 @@
         %p.description
           %label Pattern:
           = entity.pattern
+        %p.description
+          %label Index:
+          = entity.index
+        / TODO Display matching indices
 
         .row
           .col-md-6
