--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,52 +20,50 @@
     %meta{ name: 'author', content: '' }
 
     / Le styles
-    %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', media: 'screen' }
-    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/css/sb-admin-2.min.css', media: 'screen' }
-    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.min.css', media: 'screen' }
-    %link{ rel: 'stylesheet', href: 'https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css', media: 'screen' }
-    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css', media: 'screen' }
-    %link{ rel: 'stylesheet', href: '/_proxes/css/typeahead.css', media: 'screen' }
-    /[if lt IE 9] <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    /[if lt IE 9] <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/startbootstrap-sb-admin-2/3.3.7+1/js/sb-admin-2.min.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/metisMenu/2.5.2/metisMenu.min.js' }
-  %body
+    %link{ rel: 'stylesheet', href: '/css/sb-admin-2.min.css', media: 'screen' }
+    %link{ rel: 'stylesheet', href: '/css/styles.css', media: 'screen' }
+    %link{ rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css', media: 'screen' }
+  %body#page-top
+    / Page Wrapper
     #wrapper
-      = haml :'partials/navbar', locals: { title: (defined?(title) ? title : 'ProxES') }
-      #page-wrapper
-        -if defined?(title) || defined?(actions)
-          .row
-            %h1.col-md-9= defined?(title) ? title : '&nbsp'
-            .col-md-3.text-right{ style: 'margin-top: 20px' }
-              = haml :'partials/actions', locals: { actions: defined?(actions) ? actions : {} }
-        -else
-          %div{ style: 'padding-top: 20px' }
+      = haml :'partials/sidebar', locals: { title: (defined?(title) ? title : 'ProxES') }
 
-        .row
-          .col-md-12
+      #content-wrapper.d-flex.flex-column
+        #content
+          = haml :'partials/topbar'
+          .container-fluid
+            / TODO
+            / .row
+            /   .col-md-12
             = haml :'partials/notifications'
+            - if defined?(title) || defined?(actions)
+              .row
+                .col-md-9
+                  %h1.text-dark.mb-2= defined?(title) ? title : '&nbsp;'
+                .col-md-3.text-right.mt-1
+                  = haml :'partials/actions', locals: { actions: defined?(actions) ? actions : {} }
+            - else
+              %div{ style: 'padding-top: 20px' }
 
-        = yield
-        %footer.footer.text-muted.text-center
-          %hr
-          .copyright
-            :plain
-              &copy; <script>document.write(new Date().getFullYear())</script>, DataTools.io
+            = yield
 
+        = haml :'partials/footer'
+
+    / Scroll to Top Button
+    %a.scroll-to-top.rounded{ href: '#page-top' }
+      %i.fas.fa-angle-up
 
     / Placed at the end of the document so the pages load faster
-    %script{ type: 'text/javascript', src: 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.min.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.min.js' }
-    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js' }
-    %script{ type: 'text/javascript', src: '/_proxes/js/typeahead.bundle.min.js' }
-    %script{ type: 'text/javascript', src: '/_proxes/js/bundle.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js' }
+    / %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.production.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js' }
+    %script{ type: 'text/javascript', src: 'https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js' }
+    %script{ type: 'text/javascript', src: '/js/sb-admin-2.min.js' }
+    %script{ type: 'text/javascript', src: '/js/scripts.js' }
     :javascript
         $(function() {
-            $('.sidebar-nav').metisMenu();
             $('.select2').select2();
         });
 
